--- a/PriceCalc/Base.lproj/Main.storyboard
+++ b/PriceCalc/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dxs-vw-rEV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XwO-2l-BZT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7a3-Aw-ElI">
-                                <rect key="frame" x="94" y="192" width="187" height="30"/>
+                                <rect key="frame" x="94" y="148" width="187" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="XSW-Qa-IoM"/>
                                 </constraints>
@@ -28,7 +28,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartQuotesType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bPC-4S-Fyd">
-                                <rect key="frame" x="94" y="154" width="187" height="30"/>
+                                <rect key="frame" x="94" y="110" width="187" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Yjr-gM-JPK"/>
                                 </constraints>
@@ -37,7 +37,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lM0-Rm-jh0">
-                                <rect key="frame" x="94" y="230" width="187" height="30"/>
+                                <rect key="frame" x="94" y="186" width="187" height="30"/>
                                 <color key="backgroundColor" red="0.74005955457687378" green="0.80838888883590698" blue="0.93579632043838501" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="btM-UL-Sn9"/>
@@ -63,6 +63,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="QKZ-l5-FP9"/>
                     <navigationItem key="navigationItem" title="Price Calc" id="s7s-Eg-c3u"/>
                     <connections>
                         <outlet property="calculateButton" destination="lM0-Rm-jh0" id="Thk-Cs-8Ct"/>
@@ -72,26 +73,81 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="968.79999999999995" y="-561.76911544227892"/>
+            <point key="canvasLocation" x="1240.8" y="-613.04347826086962"/>
         </scene>
         <!--Item-->
-        <scene sceneID="Dyf-Qs-pDg">
+        <scene sceneID="znY-fB-09o">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dxs-vw-rEV" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="sBY-aa-7i4"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QIe-qF-kEi">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
+                <viewController id="Own-Qt-823" customClass="SecondViewController" customModule="PriceCalc" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yfp-hH-y5Y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TNO-3B-V7W">
+                                <rect key="frame" x="94" y="150" width="187" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartQuotesType="no"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="alH-eG-qqR">
+                                <rect key="frame" x="94" y="112" width="187" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KpD-SP-Ja7">
+                                <rect key="frame" x="94" y="188" width="187" height="30"/>
+                                <color key="backgroundColor" red="0.74005955459999995" green="0.80838888880000004" blue="0.93579632040000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.92878693339999996" green="0.94462335109999995" blue="0.97779244180000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Calc"/>
+                                <connections>
+                                    <action selector="calculateValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="30v-oX-jdl"/>
+                                    <action selector="calculateValue:" destination="Own-Qt-823" eventType="touchUpInside" id="8VZ-95-Ejg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="alH-eG-qqR" firstAttribute="leading" secondItem="TNO-3B-V7W" secondAttribute="leading" id="00b-Bk-b2e"/>
+                            <constraint firstItem="alH-eG-qqR" firstAttribute="centerX" secondItem="yfp-hH-y5Y" secondAttribute="centerX" id="CZD-Ee-euT"/>
+                            <constraint firstItem="TNO-3B-V7W" firstAttribute="top" secondItem="alH-eG-qqR" secondAttribute="bottom" constant="8" symbolic="YES" id="Nfj-jh-LL6"/>
+                            <constraint firstItem="TNO-3B-V7W" firstAttribute="leading" secondItem="KpD-SP-Ja7" secondAttribute="leading" id="U2u-BL-QUf"/>
+                            <constraint firstItem="TNO-3B-V7W" firstAttribute="trailing" secondItem="KpD-SP-Ja7" secondAttribute="trailing" id="b0n-o8-o7q"/>
+                            <constraint firstItem="KpD-SP-Ja7" firstAttribute="top" secondItem="TNO-3B-V7W" secondAttribute="bottom" constant="8" symbolic="YES" id="eo4-pG-oOc"/>
+                            <constraint firstItem="alH-eG-qqR" firstAttribute="top" secondItem="bTM-b9-6qc" secondAttribute="top" constant="92" id="iht-Wu-aIQ"/>
+                            <constraint firstItem="alH-eG-qqR" firstAttribute="leading" secondItem="bTM-b9-6qc" secondAttribute="leading" constant="94" id="jLV-Qt-JSw"/>
+                            <constraint firstItem="alH-eG-qqR" firstAttribute="trailing" secondItem="TNO-3B-V7W" secondAttribute="trailing" id="oqg-Sb-2wi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bTM-b9-6qc"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="3yf-fD-8gX"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="f6G-lr-aNl"/>
+                        <outlet property="calculateButton" destination="KpD-SP-Ja7" id="2ue-Hm-icH"/>
+                        <outlet property="itemPrice" destination="alH-eG-qqR" id="Jdh-fP-cOM"/>
+                        <outlet property="itemWeight" destination="TNO-3B-V7W" id="b87-Cr-nCE"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5th-k2-dHP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qly-Bz-xg4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="29.600000000000001" y="-561.76911544227892"/>
+            <point key="canvasLocation" x="2025" y="-613"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="8Hj-EU-Wlz">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="XwO-2l-BZT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ck4-Sz-rK8">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="U1z-p2-fwr"/>
+                        <segue destination="Own-Qt-823" kind="relationship" relationship="viewControllers" id="pDf-st-HJ9"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1U1-gi-gyI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="301.60000000000002" y="-613.04347826086962"/>
         </scene>
     </scenes>
 </document>
