--- a/PriceCalc/Base.lproj/Main.storyboard
+++ b/PriceCalc/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xNq-y4-Qim">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IoX-ty-yHR">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -78,7 +78,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1134" y="-1280"/>
+            <point key="canvasLocation" x="599" y="-246"/>
         </scene>
         <!--Compares-->
         <scene sceneID="phW-nx-ssv">
@@ -131,11 +131,7 @@
                         <viewLayoutGuide key="safeArea" id="AFs-b5-tyF"/>
                     </view>
                     <navigationItem key="navigationItem" title="Compares" id="oKr-bl-ykL">
-                        <barButtonItem key="leftBarButtonItem" title="Back" id="Jqr-fW-1Sj">
-                            <connections>
-                                <action selector="backToMainMenu:" destination="oNd-bz-G9a" id="EYF-eb-uYx"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="Jqr-fW-1Sj"/>
                     </navigationItem>
                     <connections>
                         <outlet property="firstItemPrice" destination="DYe-Sr-oKS" id="Izm-MH-UCo"/>
@@ -146,7 +142,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pdf-BC-nn3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1134" y="338"/>
+            <point key="canvasLocation" x="598" y="454"/>
         </scene>
         <!--Price-->
         <scene sceneID="znY-fB-09o">
@@ -157,19 +153,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item weight" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TNO-3B-V7W">
-                                <rect key="frame" x="94" y="194" width="187" height="30"/>
+                                <rect key="frame" x="94" y="150" width="187" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" smartDashesType="no" smartQuotesType="no"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="alH-eG-qqR">
-                                <rect key="frame" x="94" y="156" width="187" height="30"/>
+                                <rect key="frame" x="94" y="112" width="187" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="next" smartDashesType="no" smartQuotesType="no"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KpD-SP-Ja7">
-                                <rect key="frame" x="94" y="232" width="187" height="30"/>
+                                <rect key="frame" x="94" y="188" width="187" height="30"/>
                                 <color key="backgroundColor" red="0.74005955459999995" green="0.80838888880000004" blue="0.93579632040000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.92878693339999996" green="0.94462335109999995" blue="0.97779244180000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Calc"/>
@@ -208,121 +204,63 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qly-Bz-xg4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1134" y="-475"/>
+            <point key="canvasLocation" x="2121" y="-648"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="psy-DL-aIn">
+        <!--Main Menu-->
+        <scene sceneID="qhn-4G-gsM">
             <objects>
-                <viewController id="xNq-y4-Qim" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="KN3-xv-mU4">
+                <tableViewController id="MYE-Pm-UwY" customClass="MainTableViewController" customModule="PriceCalc" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="YrM-9q-yY4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="P6p-IK-3z7">
-                                <rect key="frame" x="16" y="20" width="343" height="627"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7sn-iq-3gO">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="182.5"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="scale-2"/>
-                                        <connections>
-                                            <segue destination="we5-mx-faz" kind="show" id="Dwx-g4-GNr"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jtu-xc-PW3">
-                                        <rect key="frame" x="0.0" y="222.5" width="343" height="182"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="balance"/>
-                                        <connections>
-                                            <segue destination="GkF-4h-nb5" kind="show" id="opn-gj-SO5"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EjU-Li-JKQ">
-                                        <rect key="frame" x="0.0" y="444.5" width="343" height="182.5"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="scale"/>
-                                        <connections>
-                                            <segue destination="w9l-dl-ytQ" kind="show" id="Jrf-bE-gYC"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="P6p-IK-3z7" firstAttribute="trailing" secondItem="KN3-xv-mU4" secondAttribute="trailingMargin" id="eCf-qd-GS1"/>
-                            <constraint firstItem="P6p-IK-3z7" firstAttribute="top" secondItem="7v2-MY-qXy" secondAttribute="top" id="gCZ-la-0ah"/>
-                            <constraint firstAttribute="bottom" secondItem="P6p-IK-3z7" secondAttribute="bottom" constant="20" symbolic="YES" id="hVJ-xk-naI"/>
-                            <constraint firstItem="P6p-IK-3z7" firstAttribute="leading" secondItem="KN3-xv-mU4" secondAttribute="leadingMargin" id="l8V-lQ-4xU"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="7v2-MY-qXy"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Z8V-fD-vvF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="blf-ZC-97T">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="blf-ZC-97T" id="VrC-NP-Xyo">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="Calculator" trigger="accessoryAction" id="4kb-rJ-rAg"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="MYE-Pm-UwY" id="DIX-JE-Auj"/>
+                            <outlet property="delegate" destination="MYE-Pm-UwY" id="2rt-Zp-6rA"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Main Menu" id="pAY-QA-4Qj">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="XrK-Yu-YB6">
+                            <connections>
+                                <segue destination="oNd-bz-G9a" kind="show" identifier="Compare" id="92K-JJ-Yxb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KO2-k7-6k7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-767.20000000000005" y="-613.04347826086962"/>
+            <point key="canvasLocation" x="-415.19999999999999" y="129.98500749625188"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="cGd-Ie-OcO">
+        <!--Navigation Controller-->
+        <scene sceneID="fC0-vr-yps">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GkF-4h-nb5" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Xpg-zJ-yZg"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IoX-ty-yHR" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8rO-ZK-uGR">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lN0-l7-WWf">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="oNd-bz-G9a" kind="relationship" relationship="rootViewController" id="OLL-mb-719"/>
+                        <segue destination="MYE-Pm-UwY" kind="relationship" relationship="rootViewController" id="hIW-KI-Lb5"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="P2d-Yl-8Cx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SV1-Gj-Ecf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="249" y="338"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="erZ-SW-IaA">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="we5-mx-faz" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="QKZ-l5-FP9"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZAa-UP-K8S">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fwz-5g-edF"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sI3-FF-Yqd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="249" y="-1279"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="Uan-Gm-jev">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w9l-dl-ytQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="3yf-fD-8gX"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PIC-bq-0De">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Own-Qt-823" kind="relationship" relationship="rootViewController" id="s86-Vr-UDq"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Xba-lY-5Gl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="249" y="-475"/>
+            <point key="canvasLocation" x="-1354.4000000000001" y="129.98500749625188"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="balance" width="192" height="192"/>
-        <image name="scale" width="192" height="192"/>
-        <image name="scale-2" width="192" height="192"/>
-    </resources>
 </document>
